[package]
name = "pd-proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
vm = { package = "pd-vm", path = "../pd-vm" }
proxy_abi = { package = "pd-proxy-abi", path = "../pd-proxy-abi" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
owo-colors = "4"
supports-color = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console"] }
